--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
+
+    compile 'org.hibernate:hibernate-entitymanager:5.2.10.Final'
+    compile 'org.postgresql:postgresql:42.1.4.jre7'
 }
 
 // Define the main class for the application
